--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "main": "js/index.js",
   "scripts": {
-    "dev": "set NODE_ENV=development&& webpack-dev-server --port 9000",
-    "start": "webpack-dev-server --port 9000",
+    "dev": "set NODE_ENV=development&& webpack serve",
+    "start": "webpack serve",
     "test": "jest --setupFiles dotenv/config --runInBand --no-cache",
     "build": "webpack --mode production"
   },
@@ -17,29 +17,29 @@
   "author": "jonifen",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@babel/runtime": "^7.12.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "@testing-library/react": "^10.4.8",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^4.2.1",
+    "babel-loader": "^8.2.1",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^2.0.0",
-    "jest": "^26.4.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "dotenv-webpack": "^5.1.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
