--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@testing-library/react": "^10.4.8",
+    "@testing-library/react-hooks": "^3.4.2",
     "babel-loader": "^8.2.1",
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
@@ -35,6 +36,7 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
+    "react-test-renderer": "^17.0.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
