Set node_env for build script, add in dev build script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "set NODE_ENV=development&& webpack serve",
     "start": "webpack serve",
     "test": "jest --setupFiles dotenv/config --runInBand --no-cache",
-    "build": "webpack --mode production"
+    "build": "set NODE_ENV=production&& webpack --mode production",
+    "build:dev": "set NODE_ENV=development&& webpack --mode development"
   },
   "keywords": [],
   "author": "jonifen",
